<resources>
    <string name="app_name">Svetlogorsk CHPP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_switchgear">ЛЭП</string>
    <string name="transformer_of_own_needs">ТСН</string>
    <string name="blockGenerator_transformer">Блок ГТ</string>
    <string name="test">Test</string>
    <string name="svetlogorsk_chpp">Светлогорская ТЭЦ</string>
    <string name="ory">ОРУ</string>
    <string name="ory_110">ОРУ-110</string>
    <string name="ory_220">ОРУ-220</string>
    <string name="kv_3_15">3,15 кВ</string>
    <string name="kv_0_4">0,4 кВ</string>
    <string name="kv_6_3">6,3 кВ</string>
    <string name="name_ory">Открытое распределительное устройство</string>
    <string name="name_tsn">Трансформаторы собственных нужд</string>
    <string name="shr_1">1ШР</string>
    <string name="shr_2">2ШР</string>
    <string name="lr">ЛР</string>
    <string name="or">ОР</string>
    <string name="zemlia">Земляная</string>
    <string name="faznai">Фазная</string>
    <string name="apv">АПВ</string>
    <string name="apv_s">АПВ, сек</string>
    <string name="text_gsy_apv">
        АПВ - %2$s
       \nГЩУ - %1$s
    </string>
    <string name="tex_volt_tsn">%1$s: %2$s</string>
    <string name="transformator">Трасформатор</string>
    <string name="generator">Генератор</string>
    <string name="turbin">Турбина</string>
    <string name="name_block">Блоки Генератор-Трансформатор</string>
    <string name="power">Установленая P = 155 МВт \nУстановленая Q = 541,5 ГКал</string>
    <string name="electric_motors">Эл.двигатели</string>
    <string name="electric_motor">Эл. двигатель</string>
    <string name="title_electric_motor">Электродвигатели</string>
    <string name="v">U</string>
    <string name="tg">ТГ</string>
    <string name="tg1">ТГ 1</string>
    <string name="tg3">ТГ 3</string>
    <string name="tg4">ТГ 4</string>
    <string name="tg5">ТГ 5</string>
    <string name="tg6">ТГ 6</string>
    <string name="ka1">К/А 1</string>
    <string name="ka6">К/А 6</string>
    <string name="ka7">К/А 7</string>
    <string name="ka8">К/А 8</string>
    <string name="ka9">К/А 9</string>
    <string name="ka">К/А</string>
    <string name="ktc_to">КТЦ т/о</string>
    <string name="pen">ПЭН</string>
    <string name="pn">ПН</string>
    <string name="sn">СН</string>
    <string name="bnt">БНТ</string>
    <string name="coastal">Береговая</string>
    <string name="cooling_tower">Градирня</string>
    <string name="ktc_ko">КТЦ к/о</string>
    <string name="bug">Багерная</string>
    <string name="ktc_ty">КТЦ ТУ</string>
    <string name="hvo">ХВО</string>
    <string name="hc">ХЦ</string>
    <string name="ry">РУ</string>
    <string name="kry">КРУ</string>
    <string name="kry_3_15">КРУ-3,15</string>
    <string name="kry_6_3">КРУ-6,3</string>
    <string name="rusn">РУСН</string>
    <string name="v_04">0.4 кВ</string>
    <string name="v_all">Все</string>
    <string name="v_315">3.15 кВ</string>
    <string name="v_63">6.3 кВ</string>
    <string name="v_rep">РЭП</string>
    <string name="voltage">U = %s В</string>
    <string name="responsibly">Ответственные</string>
    <string name="s1">1</string>
    <string name="s2">2</string>
    <string name="s3">3</string>
    <string name="s4">4</string>
    <string name="s5">5</string>
    <string name="s6">6</string>
    <string name="s7">7</string>
    <string name="s8">8</string>
    <string name="s9">9</string>
    <string name="filter">Фильтр: %s</string>
    <string name="text_voltage">Электродвигатели по номинальному напряжению</string>
    <string name="text_tg_title">Элктродвигатели Турбогенераторов</string>
    <string name="text_ka_title">Электродвигатели котлоагрегатов</string>
    <string name="text_ktc_to_title">Электродвигатели КТЦ т/о</string>
    <string name="text_ktc_ko_title">Электродвигатели КТЦ к/о</string>
    <string name="text_kry_315_title">КРУ - 3,15 кВ</string>
    <string name="s_1">1 секция</string>
    <string name="s_2">2 секция</string>
    <string name="s_3">3 секция</string>
    <string name="s_4">4 секция</string>
    <string name="s_5">5 секция</string>
    <string name="s_6">6 секция</string>
    <string name="s_7">7 секция</string>
    <string name="s_8">8 секция</string>
    <string name="s_9">9 секция</string>
    <string name="text_rusn_04_title">РУСН - 0,4 кВ</string>
    <string name="pump">Насос</string>
    <string name="close">Close</string>
    <string name="text_create_em">name: %1$s\ncategory: %2$s\ncharacteristics: %3$s\nvoltage: %4$s\ngeneralCategory: %5$s\nindexSection: %6$s\nschema: %7$s\np: %8$s\ni: %9$s\npump: %10$s</string>
    <string name="hvo_desalting">Обессоливание</string>
    <string name="hvo_pre_cleaning">Предочистка</string>
    <string name="hvo_so">Очистные</string>
    <string name="hvo_other">Остальное</string>
    <string name="ec">ЭЦ, ЦЦР</string>
    <string name="electrical_assembly">Эл. сборки</string>
    <string name="eclectrical_assembly_name_layout">Силовые сборки и распределительные устройства</string>
    <string name="bns">БНС</string>
    <string name="panel_block">Щит. блок</string>
    <string name="ory_110_220">ОРУ-110кВ, ОРУ-220кВ</string>
    <string name="name_ory_discription">
        Две рабочие системы шин с обходной системой шин.
        \n <b>Допустимое расстояние:</b>
        \n<b>-</b> для человека: <b>до 1кВ</b> – на ВЛ 0,6м, в остальных электроустановках без прикосновения; <b>3-35кВ</b> – 0,6м; <b>110кВ</b> – 1,0м; <b>220кВ</b> – 2,0м.
        \n<b>-</b> для механизмов: <b>до 1кВ</b> – 1,0м; <b>3-35кВ</b> – 1,0м; <b>110кВ</b> – 1,5м; <b>220кВ</b> – 2,5м.
    </string>
    <string name="name_ory_discription2">
        Две рабочие системы шин с обходной системой шин.
    </string>
    <string name="name_tsn_discription"><b>Силовой рансформа́тор</b> — электротехническое устройство в сетях электроснабжения
        (электросетях) с двумя или более обмотками (трансформатор), который посредством электромагнитной индукции преобразует
        одну величину переменного напряжения и тока в другую величину переменного напряжения и тока, той же частоты без изменения
        её передаваемой мощности.</string>
    <string name="name_block_home">Блоки ГТ</string>
    <string name="name_zero_vision">Vision Zero</string>
    <string name="zero_vision_1">Стать лидером</string>
    <string name="zero_vision_2">Выявлять угрозы</string>
    <string name="zero_vision_3">Определять цели</string>
    <string name="zero_vision_4">Создать систему безопасности и гигиены труда</string>
    <string name="zero_vision_5">Обеспечить безопасность и гигиену на рабочих местах</string>
    <string name="zero_vision_6">Повышать квалификацию</string>
    <string name="zero_vision_7">Инвестировать в кадры</string>
    <string name="zero_vision_11">показать приверженность принципам</string>
    <string name="zero_vision_21">контролировать риски</string>
    <string name="zero_vision_31">разрабатывать программы</string>
    <string name="zero_vision_41">достичь высокого уровня организации</string>
    <string name="zero_vision_51">при эксплуатации оборудования</string>
    <string name="zero_vision_61">развивать профессиональные навыки</string>
    <string name="zero_vision_71">мотивировать посредством участия</string>
    <string name="zero_vision_supervisor">Руководитель работ \n(начальник участка, мастер):</string>
    <string name="zero_vision_supervisor_1">
        • Я подаю пример своим работникам для подражания и демонстрирую приверженность принципам безопасности и гигиены труда;\n\n
        • Я следую правилам и использую средства индивидуальной защиты;\n\n
        • Я немедленно реагирую на нарушение моим работником требований охраны труда и провожу инструктаж;\n\n
        • Я не допускаю беспорядка и халатности на рабочем месте.\n
    </string>
    <string name="zero_vision_worker">Работник:</string>
    <string name="zero_vision_worker_1">
        • Я несу персональную ответственность за безопасное выполнение поставленных ему задач и безопасное рабочее место;\n\n
        • Я соблюдаю инструкции (инструкции по охране труда, пожарной безопасности, технологические инструкции) и применяю безопасные методы труда;\n\n
        • Я использую средства индивидуальной защиты и следую знакам безопасности;\n\n
        • Я обращаюсь за помощью к своему руководителю при возникновении вопросов по безопасному проведению работ;\n\n
        • Я применяю <b>«ПРАВО НА ПРИОСТАНОВКУ РАБОТ»</b> в случае выявления небезопасного проведения работ для предотвращения возможных происшествий;\n\n
        • Я внимателен по отношению к безопасному выполнению работ другими работниками\n
    </string>
    <string name="zero_vision_danger">Опасность!</string>
    <string name="zero_vision_memo_1">Перед началом работы:</string>
    <string name="zero_vision_memo_2">При выполнении работы</string>
    <string name="zero_vision_memo_3">Контроль опасностей: что мне нужно?</string>
    <string name="zero_vision_memo_4">После работы</string>
    <string name="zero_vision_purposes">Цели</string>
    <string name="zero_vision_tasks">Задачи</string>
    <string name="zero_vision_syot">СУОТ-система управления охраной труда корпоративная культура безопасности труда</string>
    <string name="chief_engineer">Главный\nинженер</string>
    <string name="engineer_ot">Инженер по\nохране труда</string>
    <string name="zero_vision_kontrol_syot">Контроль за соблюдением работниками требований по охране труда</string>
    <string name="zero_vision_kontrol_syot_supervision">ЕЖЕМЕСЯЧНЫЙ (начальник участка)</string>
    <string name="zero_vision_master">ЕЖЕДНЕВНЫЙ (мастер, общественный инспектор по охране труда)</string>
    <string name="zero_vision_kontrol_syot_worker">Корпоративная культура безопасности</string>
    <string name="text_corporate_safety">Осмысление работниками необходимости соблюдения требований, инструкций по охране труда и личная ответственность за безопасность</string>
    <string name="text_corporate_safety_1">Организация рабочего места и трудового процесса</string>
    <string name="text_corporate_safety_2">Культура безопасности труда личности: профессиональные знания, опыт прошлых ошибок, личная дисциплина, мотивация, инициатива.</string>
    <string name="text_corporate_safety_3">Доверие и культура взаимоотношений между работниками (нравственно-психологический климат), привлечение работников к обеспечению безопасности</string>
    <string name="additionally">Дополнение</string>
    <string name="transformer_parameters">Параметры трансформатора</string>
    <string name="transformer_type">Тип трансформатора</string>
    <string name="transformer_p">P, МВт</string>
    <string name="basic">Основной</string>
    <string name="spare">Резервный</string>
    <string name="parameters">Параметры</string>
    <string name="decryption">Расшифровка</string>
    <string name="name_type">Тип трансформатора</string>
    <string name="name_type_smile">Тип тр-ра</string>
    <string name="parameter_type_tr">Параметры трансформатора</string>
    <string name="parameter_type_tr_smile">Параметры тр-ра</string>
    <string name="transcript_type">Расшифровка типа</string>
    <string name="power_supply">Источник питания</string>
    <string name="name_type_tg">Тип генератора</string>
    <string name="volume_tg">Объём г-ра</string>
    <string name="volume_receiver">Объем р-ра</string>
    <string name="source_excitation">Источник возбуждения</string>
    <string name="generator_start">Пуск генератора</string>
    <string name="translation_into_rv">Перевод на РВ</string>
    <string name="translation_from_rv">Перевод с РВ</string>
    <string name="name_type_turbin">Тип турбины</string>
    <string name="power_equipment">Мощность</string>
    <string name="steam_consumption">Расход</string>
    <string name="mvt">МВт</string>
    <string name="gkal">ГКал</string>
    <string name="t_ch">т/ч</string>
</resources>