<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_content_parameter_ory"
    android:layout_margin="8dp"
    android:padding="4dp"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewStyleContent"
        android:text="@string/turbin"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:textColor="@color/text_content_rza"
        android:layout_marginTop="4dp"
        android:textStyle="bold" />

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_type_turbin"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_type_turbin"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/name_type_turbin" />

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/transcript_type"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_transcript_type"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/transcript_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyleContent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginStart="16dp"
            android:text="@string/power_equipment"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_marginStart="8dp"
            style="@style/TextViewStyleContent"
            android:layout_marginEnd="16dp"
            android:text="@string/steam_consumption"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_power_el"
            style="@style/EditTestStyleElectricalEquipment"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="name"
            android:hint="@string/mvt" />

        <EditText
            android:id="@+id/et_power_thermal"
            style="@style/EditTestStyleElectricalEquipment"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:autofillHints="name"
            android:hint="@string/gkal" />

        <EditText
            android:id="@+id/et_steam_consumption"
            style="@style/EditTestStyleElectricalEquipment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:autofillHints="name"
            android:hint="@string/t_ch" />

    </LinearLayout>

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/additionally"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_additionally"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/additionally" />

</LinearLayout>