<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_margin="16dp"
    android:background="@drawable/background_content_type_tr"
    android:layout_height="wrap_content">

    <TextView
        style="@style/TextViewStyleContent"
        android:textStyle="bold"
        android:text="@string/transformer_parameters"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_type_tr"
            style="@style/EditTestStyleElectricalEquipment"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textVisiblePassword"
            android:hint="@string/transformer_type"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_p_tr"
            style="@style/EditTestStyleElectricalEquipment"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textVisiblePassword"
            android:hint="@string/transformer_p"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_type_parameter"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textVisiblePassword"
        android:hint="@string/parameters"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/ch_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_time_closed"
        app:selectionRequired="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_basic"
            style="@style/ChipShiftSchedule"
            android:text="@string/basic" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ch_spare"
            style="@style/ChipShiftSchedule"
            android:text="@string/spare" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/et_type_decryption"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textVisiblePassword"
        android:hint="@string/decryption"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>