<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_type"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_type_tr"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/name_type_smile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/parameter_type_tr"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_parameter_type_tr"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/parameter_type_tr_smile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/transcript_type"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_transcript_type"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:hint="@string/transcript_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewStyleContent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/additionally"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_additionally"
        style="@style/EditTestStyleElectricalEquipment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="name"
        android:hint="@string/additionally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>